# CricketRun

hybridToRepos/GUI/: checkYarpPorts  cleanYarpPorts  hybsysGUI.py  launchCamera  launchMouse1  launchMouse2  launchOgre  launchSound  stopCamera  stopMouse1  stopMouse2  stopSound
hybridToRepos/auditory/: cricket_sound.pd
hybridToRepos/mouseReader/: CMakeLists.txt  main.cpp
hybridToRepos/ogre/ogreClient/: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt
hybridToRepos/ogre/ogreFront/: BaseApplication.cpp  BaseApplication.cpp~  BaseApplication.h  CMakeLists.txt  Euler.h  TutorialApplication.cpp  TutorialApplication.cpp~  TutorialApplication.h  inputParams.txt
hybridToRepos/robot/: CMakeLists.txt  SerialInterfaces.h  main.cpp  servoControllerArduino6.pde
hybridToRepos/vision/: CMakeLists.txt  red_object_tracking.cpp
