PROJECT(readMouse)
cmake_minimum_required(VERSION 2.8.3)
FIND_PACKAGE(YARP REQUIRED)



FIND_PACKAGE(Qt3 REQUIRED)

ADD_DEFINITIONS(${QT_DEFINITIONS})

# pick up YARP find scripts
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${YARP_MODULE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PWD})
INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR})

ADD_EXECUTABLE(readMouse main.cpp)
TARGET_LINK_LIBRARIES(readMouse ${YARP_LIBRARIES} ${ACE_LIBRARIES} ${QT_LIBRARIES})


